--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
-  "name": "toggle-kana-punctuation",
-  "title": "Toggle Kana Punctuation",
+  "name": "switch-kana-punctuation",
+  "title": "Switch Kana Punctuation",
   "description": "Easily switch between different punctuation styles (e.g., Japanese and Western) while typing in Japanese.",
   "icon": "extension-icon.png",
   "author": "harusaku",
@@ -11,10 +11,10 @@
   "license": "MIT",
   "commands": [
     {
-      "name": "toggle-kana-punctuation",
-      "title": "Toggle Kana Punctuation",
-      "description": "Toggle Kana Punctuation",
-      "mode": "no-view"
+      "name": "switch-kana-punctuation",
+      "title": "Switch Kana Punctuation",
+      "description": "Switch Kana Punctuation",
+      "mode": "view"
     }
   ],
   "dependencies": {
@@ -30,10 +30,10 @@
     "typescript": "^5.4.5"
   },
   "scripts": {
-    "build": "ray build",
-    "dev": "ray develop",
-    "fix-lint": "ray lint --fix",
-    "lint": "ray lint",
+    "build": "npx ray build",
+    "dev": "npx ray develop",
+    "fix-lint": "npx ray lint --fix",
+    "lint": "npx ray lint",
     "prepublishOnly": "echo \"\\n\\nIt seems like you are trying to publish the Raycast extension to npm.\\n\\nIf you did intend to publish it to npm, remove the \\`prepublishOnly\\` script and rerun \\`npm publish\\` again.\\nIf you wanted to publish it to the Raycast Store instead, use \\`npm run publish\\` instead.\\n\\n\" && exit 1",
     "publish": "npx @raycast/api@latest publish"
   },
